# CoACD

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  benchmark.ps1  build_vs.ps1  build_wheel_fast.ps1  coacd-1.0.7-cp39-abi3-win_amd64.whl  coacd_blender_addon  debug_test.py  generate_vs_solution.ps1  main.cpp  profile.ps1  run_tests.py  setup.py  test_single.ps1
.github/workflows/: build.yml  macos-build.yml  test-x86.yml  wheel.yml
3rd/cdt/CDT/include/: CDTUtils.h  CDTUtils.hpp  Triangulation.h  Triangulation.hpp
cmake/: spdlog.cmake  zlib.cmake
public/: coacd.cpp  coacd.h
python/package/: __init__.py
src/: clip.cpp  config.h  cost.cpp  crash_handler.cpp  crash_handler.h  hausdorff.h  mcts.cpp  mcts.h  model_obj.cpp  model_obj.h  process.cpp  process.h  profiler.cpp  profiler.h  shape.cpp
src/btConvexHull/: btAlignedAllocator.cpp  btConvexHullComputer.cpp
src/quickhull/Structs/: Mesh.hpp
